Fix issue with extra horizontal scrollbar space on mobile

--- a/assets/src/styles/pages/_monitoring_location.scss
+++ b/assets/src/styles/pages/_monitoring_location.scss
@@ -19,6 +19,7 @@
 table#site-summary {
     table-layout: fixed;
     width: 100%;
+    overflow: hidden;  /* Prevent extra scrollbar space */
     td.loc-metadata {
         word-wrap: break-word;
     }
